[package]
name = "web_bench"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

[dependencies]
clap = "4.4.11"
futures = "0.3.29"
hyper = "1.1.0"
plotters = "0.3.5"
rayon = "1.8.0"
reqwest = "0.11.23"
tokio = { version = "1.35.1", features = ["full"] }
