[package]
name = "web_bench"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

[dependencies]
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
rayon = "1.9"
reqwest = { version = "0.12" }
tokio = { version = "1.36", features = ["full"] }
rand = "0.9.0-alpha.1"
